--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,8 @@ header{
     height: 60vh;
     background-color: lightgrey;
     text-align: left;
+    padding-left: 150px;
+    padding-top: 250px;
 }
 
 footer{
@@ -22,6 +24,7 @@ footer{
     background-color: #2b2b2b;
     color:white;
     text-align:center;
+    padding-top: 50px;
 }
 
 section{
@@ -33,7 +36,7 @@ section{
 }
 
 .full{
-    height: 80px;
+    height: 100px;
 }
 
 .col-12{
@@ -85,4 +88,43 @@ section{
     text-align: center;
     margin: 1%;
     float: left;
+}
+
+.logo{
+    width: 200px;
+    float: left;
+}
+
+.nav-con{
+    width: 1000px;
+    height: 50px;
+    float: right;
+    margin-top: 5px;
+}
+
+.nav-con ul{
+    list-style: none;
+}
+
+.nav-con li{
+    float: left;
+    height: 28px;
+    background-color: white;
+    border-radius: 5px;
+    padding-left: 10px;
+    padding-right: 20px;
+    margin-right: 10px;
+    margin-left: 10px;
+    padding-top: 8px;
+}
+
+.nav-con li:hover{
+    background-color: #2b2b2b;
+    color: white;
+    cursor: pointer;
+}
+
+.active{
+    background-color: #2b2b2b !important;
+    color: white;
 }
